--- a/sass/partials/_input.scss
+++ b/sass/partials/_input.scss
@@ -33,8 +33,8 @@
 	padding: 0 1em;
 	width: 40%;
 	color: #696969;
-	font-weight: bold;
-	font-size: 70.25%;
+	// font-weight: bold;
+	// font-size: 70.25%;
 	-webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 	-webkit-touch-callout: none;
@@ -43,13 +43,17 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+
+	font-size: 14px;
+	font-weight: 300;
 }
 
 .input__label-content {
 	position: relative;
 	display: block;
-	padding: 1.6em 0;
+	// padding: 1.6em 0;
 	width: 100%;
+	padding: 1.2 0;
 }
 
 .graphic {
