--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,6 +10,7 @@
 @import "partials/layout";
 @import "partials/input";
 @import "partials/dashboard";
+@import "partials/checkbox";
 
 /* ==========================================================================
 Global Styles
@@ -101,6 +102,10 @@ ul li {
 .dashboard-title {
   text-align: left;
   margin-bottom: 20px;
+}
+
+.modal-content{
+  padding: 40px;
 }
 /* ==========================================================================
 Animations
